# xdg-desktop-portal

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: aaa.rs  account.rs  camera.rs  email.rs  file_chooser.rs  game_mode.rs  location.rs  memory_monitor.rs  network_monitor.rs  notification.rs  power_profile_monitor.rs  proxy_resolver.rs  screencast.rs  screenshot.rs  trash.rs  wallpaper.rs
src/: account.rs  camera.rs  common.rs  email.rs  errors.rs  file_chooser.rs  game_mode.rs  lib.rs  location.rs  memory_monitor.rs  network_monitor.rs  notification.rs  portal.rs  power_profile_monitor.rs  proxy_resolver.rs  request.rs  screen_cast.rs  screencast.rs  screenshot.rs  trash.rs  wallpaper.rs
src/proxy/: account.rs  camera.rs  email.rs  file_chooser.rs  game_mode.rs  location.rs  memory_monitor.rs  mod.rs  network_monitor.rs  notification.rs  power_profile_monitor.rs  proxy_resolver.rs  request.rs  screencast.rs  screenshot.rs  trash.rs  wallpaper.rs
