[package]
name = "xdg-desktop-portal"
version = "0.1.0"
edition = "2024"
authors = ["dlzht"]

[dependencies]
serde = "1.0"
bitflags = "2.9"
zvariant = { version = "5.4" }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1" , features = [ "full" ] }
