[package]
name = "xdg-desktop-portal"
version = "0.1.0"
edition = "2024"
authors = ["dlzht"]
repository = "https://github.com/dlzht/xdg-desktop-portal"
license = "MIT"
keywords = ["xdp", "xdg", "screencast", "xdg-desktop-portal"]
categories = ["gui", "asynchronous"]

[dependencies]
serde = "1.0"
bitflags = "2.9"
zvariant = { version = "5.4" }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1" , features = [ "full" ] }
